# pipxu

./: .gitignore  Makefile  README.md  bootstrap.sh  pipxu-bootstrap  pyproject.toml
doc/: debug.md
pipxu/: __main__.py  main.py  pipxu.py  run.py  utils.py
pipxu/commands/: debug.py  inject.py  install.py  list.py  reinstall-all.py  reinstall.py  runpip.py  uninject.py  uninstall-all.py  uninstall.py  upgrade-all.py  upgrade.py  venv.py  version.py
scripts/: bootstrap.sh  pipxu-pudb
